# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .editorconfig  .gitignore  .p10k.zsh  .zshrc  CHANGELOG.md  Makefile  Notes.md  README.md  Taskfile.yml  copier.yml  dot_gitconfig  dot_gitconfig.tmpl  dot_zshrc  dot_zshrc.tmpl  pyproject.toml  run_once_install-omz-plugins.tmpl  ssh_to_wsl.md  wg0-client.conf
.github/: CODEOWNERS
.github/workflows/: test-template-lite.yml  test-template-no-tasks.yml  test-template-with-scripts.yml  test-template-with-tasks.yml  test-template.yml
home_template/: .gitconfig.jinja  {%if _copier_conf.os != "windows" %}.zshrc{%endif%}.jinja
scripts/: configs.py  setup.py  update.py
src/: setup.py  update.py
template/: setup.py  {%if _copier_conf.os != "windows" %}.zshrc{%endif%}.j2  {%if _copier_conf.os != 'windows'%}.zshrc{%endif%}.j2  {%if _copier_conf.os != 'windows'%}{{ setup_script }}.sh{%endif%}.j2  {%if _copier_conf.os == 'windows'%}{{ setup_script }}.ps1{%endif%}.j2  {{ setup_script }}.ps1.j2  {{ setup_script }}.sh.j2
template/common/: .gitconfig.j2
template/common/dev/: Taskfile.yml
template/scripts/: configs.json  configs.py  setup.py  setup_configs.json  update.py
template/{%if _copier_conf.os != 'windows'%}unix{%endif%}/: .taskrc.yml  .uv_wrapper.zsh  .zsh_aliases  .zsh_aliases.j2  .zshrc.j2  initial_setup.sh.j2
template/{%if _copier_conf.os != 'windows'%}unix{%endif%}/dev/: Taskfile.yml
template/{%if _copier_conf.os == 'windows'%}windows{%endif%}/: PowerShell_profile.ps1  initial_setup.ps1.j2
template/{{ dotfiles_dir }}/: .gitignore.j2  {%if _copier_conf.os != "windows" %}.zshrc{%endif%}.j2  {%if _copier_conf.os == "windows" %}Microsoft.PowerShell_profile.ps1{%endif%}  {{ setup_script }}.sh.j2
vscode/: settings.json
