[project]
name = "dotfiles"
version = "0.0.0" # See current_version below
requires-python = ">=3.12"
description = "Template to manage dotfiles"
readme = "README.md"
authors = [{ name = "Vu LE", email = "ledkvu@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[tool.uv]
package = false


# Automatically update version in pyproject.toml and CHANGELOG.md
# https://callowayproject.github.io/bump-my-version/
[tool.bumpversion]
current_version = "0.7.7"
allow_dirty = false
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]\n\n###"
replace = "[Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}\n\n###"
