[project]
name = "dotfiles"
version = "0.0.0" # See current_version below
requires-python = ">=3.12"
description = "Template to manage dotfiles"
readme = "README.md"
authors = [{ name = "Vu LE", email = "ledkvu@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[tool.uv]
package = false
